--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "hamburger-react": "^2.5.1",
     "lucide-react": "^0.452.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
