--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.1",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.452.0",
